modified:   .gitmodules 	modified:   themes/ananke (modified content, untracked content)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "public"]
 	path = public
 	url = https://github.com/paulshilling/paulshilling.github.io.git
+[submodule "paulshilling.github.io"]
+	path = paulshilling.github.io
+	url = https://github.com/paulshilling/paulshilling.github.io
