modified:   .gitmodules 	modified:   config.toml 	deleted:    content/._index.md.swp 	modified:   content/_index.md 	deleted:    layouts/shortcodes/table.html 	new file:   public 	deleted:    readme.md 	new file:   static/images/intemperance2.jpg 	modified:   themes/ananke (modified content, untracked content)

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/budparr/gohugo-theme-ananke.git
 [submodule "public"]
 	path = public
-	url = https://github.com/paulshilling/paulshilling.github.io.git
+	url = https://github.com/paulshilling/paulshilling.github.io
 [submodule "paulshilling.github.io"]
 	path = paulshilling.github.io
 	url = https://github.com/paulshilling/paulshilling.github.io
